# dubbing-studio-ai

./: .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  DubbingStudio.spec  PROJECT_CONTEXT.md  README.md  TODO.md  app.py  build.py  build_desktop.py  build_log.txt  build_phase11.txt  check_png.txt  check_tests.txt  check_tests_2.txt  desktop_app.py  main.py  pyproject.toml  requirements.txt  run_dubbing_studio.bat  setup.py  upgrade_gradio.txt  voicebox.txt
.github/workflows/: ci.yml
dubbing_studio/: __init__.py  config.py  pipeline.py  validation.py
dubbing_studio/audio/: __init__.py  cleaner.py  extractor.py  mixer.py  segmenter.py
dubbing_studio/batch/: __init__.py  processor.py
dubbing_studio/cloning/: __init__.py  voice_cloner.py
dubbing_studio/diarization/: __init__.py  speaker_detector.py
dubbing_studio/emotion/: __init__.py  analyzer.py
dubbing_studio/export/: __init__.py  exporter.py
dubbing_studio/hardware/: __init__.py  optimizer.py
dubbing_studio/models/: __init__.py  manager.py
dubbing_studio/narration/: __init__.py  engine.py
dubbing_studio/speech/: __init__.py  analyzer.py  recognizer.py
dubbing_studio/subtitle/: __init__.py  generator.py
dubbing_studio/timing/: __init__.py  advanced_aligner.py  aligner.py
dubbing_studio/translation/: __init__.py  translator.py
dubbing_studio/tts/: __init__.py  audio_utils.py  chatterbox_tts.py  edge_tts_fallback.py  engine.py  lux_tts.py  qwen_tts.py  voice_library.py  voice_selector.py
dubbing_studio/video/: __init__.py  renderer.py
dubbing_studio/youtube/: __init__.py  pipeline.py
tests/: __init__.py  test_audio.py  test_batch_processor.py  test_config.py  test_config_env.py  test_desktop_app.py  test_edge_tts.py  test_emotion_analyzer.py  test_export.py  test_hardware.py  test_imports.py  test_models_manager.py  test_narration_engine.py  test_pipeline.py  test_subtitle_generator.py  test_tts_helpers.py  test_validation.py
