[project]
name = "dubbing-studio"
version = "2.0.0"
description = "Professional AI Documentary Dubbing Platform"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E713",   # test for membership should be `not in`
    "B007",   # unused loop control variable
    "B008",   # function call in default argument
    "B027",   # empty method in abstract base class
    "B904",   # raise from within except
    "F401",   # unused imports
    "F541",   # f-string without placeholders
    "F841",   # unused local variable
    "I001",   # import sorting
    "SIM102", # nested if statements
    "SIM105", # use contextlib.suppress
    "SIM108", # ternary operator
    "SIM115", # use context manager for open
    "UP007",  # use X | Y for union types (keep Optional for readability)
    "UP015",  # unnecessary mode argument
    "UP032",  # use f-string instead of format
    "UP035",  # import from collections.abc
    "UP045",  # use X | None for Optional
    "RUF001", # ambiguous unicode character
    "RUF005", # consider iterable unpacking
    "RUF010", # use explicit conversion flag
    "RUF012", # mutable class attributes
    "RUF022", # unsorted __all__
    "RUF100", # unused noqa directive
]

[tool.ruff.lint.isort]
known-first-party = ["dubbing_studio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
